--- a/src/__variables.scss
+++ b/src/__variables.scss
@@ -6,10 +6,10 @@ $spacing-xl: 32px;
 
 // Section variables
 $section-width: 960px;
-$section-height: 90vh;
+$section-height: 70vh;
 
 // Breakpoints
-$breakpoint-mobile: 600px;
+$breakpoint-mobile: 767px;
 $breakpoint-tablet: 1024px;
 
 // Colors
@@ -18,9 +18,9 @@ $color-background: #fff;
 
 // Font Size
 $font-size-base: 16px;
-$font-size-md: 20px;
-$font-size-lg: 24px;
-$font-size-sm: 14px;
+$font-size-m: 20px;
+$font-size-l: 24px;
+$font-size-s: 14px;
 $font-size-xs: 12px;
 $font-size-xl: 32px;
 $font-size-xxl: 48px;
