feat: add about and scroll functionality

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -6,9 +6,9 @@
     justify-content: center;
 
     h1 {
+        @include heading;
         text-align: center;
         font-size: $font-size-xxxxl;
-        font-weight: 200;
         margin: 0;
     }
 
