--- a/src/__mixins.scss
+++ b/src/__mixins.scss
@@ -1,22 +1,34 @@
 @use "@/__variables" as *;
+@use "sass:map";
 
 @mixin mobile {
-    @media (max-width: $breakpoint-mobile) {
-        @content;
-    }
+  @media (max-width: $breakpoint-mobile) {
+    @content;
+  }
 }
 
 @mixin desktop {
-    @media (min-width: $breakpoint-mobile) {
-        @content;
-    }
+  @media (min-width: $breakpoint-mobile) {
+    @content;
+  }
 }
 
 @mixin section {
-    width: $section-width;
-    max-width: 100vw;
-    min-height: $section-height;
-    display: flex;
-    flex-direction: column;
-    padding: $spacing-l;
+  width: $section-width;
+  max-width: calc(100vw - $spacing-l * 2);
+  min-height: $section-height;
+  display: flex;
+  flex-direction: column;
+  padding: $spacing-l;
+}
+
+@mixin heading {
+  font-weight: 200;
+}
+
+@mixin elevation($level: "medium") {
+  @if not map.has-key($shadow-elevations, $level) {
+    @error "Invalid elevation level '#{$level}'. Must be 'low', 'medium', or 'high'.";
+  }
+  box-shadow: map.get($shadow-elevations, $level);
 }
