--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,19 @@
 @use "@/__variables" as *;
+@use "@/__mixins" as *;
 
 .header {
-    position: sticky;
-    top: 0;
-    width: $section-width;
-    max-width: calc(100vw - $spacing-l * 2);
-    padding: $spacing-l;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: sticky;
+  top: $spacing-s;
+  width: $section-width;
+  max-width: calc(100vw - $spacing-l * 2);
+  padding: $spacing-l;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* For older Safari versions */
+
+  @include elevation("low");
 }
