--- a/src/__mixins.scss
+++ b/src/__mixins.scss
@@ -20,6 +20,11 @@
   display: flex;
   flex-direction: column;
   padding: $spacing-l;
+
+  h2 {
+    @include heading;
+    font-size: $font-size-xxl;
+  }
 }
 
 @mixin heading {
